<resources>
    <string name="app_name">"Činčin"</string>
    <string name="Login_username">Vartotojo vardas</string>
    <string name="Login_password">Vartotojo slaptažodis</string>
    <string name="Reg_email">El. pašto adresas</string>
    <string name="Reg_date">Gimimo metai</string>
    <string name="Login_login_btn">Prisijungti</string>
    <string name="Login_register_btn">Registruotis</string>
    <string name="app_title">KOKTEILIŲ BARAS</string>
    <string name="login_remember_me">Prisiminti mane</string>
    <string name="login_invalid_credentials_message">Neteisingi prisijungimo duomenys</string>
    <string name="login_invalid_credentials_message_password">Klaida. Naudokite mažasias, didžiasias raides, skaičius ir simbolius .!@_</string>
    <string name="login_invalid_credentials_message_name">Klaida. Naudokite mažasias ir didžiasias raides.</string>
    <string name="login_invalid_credentials_message_email">Klaida. Naudokite mažasias, didžiasias raides, skaičius ir simbolius @._- </string>
    <string name="login_invalid_credentials_message_date">Amžius netinkamas. Turite būti vyresnis nei 20 m.</string>
    <string name="reg_title">Naujo vartotojo registracija</string>
    <string name="logo_description">Logotipas</string>
    <string name="link_description">Foto</string>
    <string name="register_successful_1">Užregistruotas vartotojas:"</string>
    <string name="register_successful_2">"Prisijunkite!</string>
    <string name="search_loading_data">Palaukite kol bus parodyti duomenys</string>
    <string name="search_error_reading_data">Nepavyko nuskaityti duomenis iš API. Daugiau info:</string>
    <string name="search_no_results">Nera duomenu pagal užklausą </string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>

</resources>