<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    android:background="@drawable/fonas">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="140dp"
        android:src="@drawable/logo"
        android:contentDescription="@string/logo_description"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:fontFamily="sans-serif-medium"
        android:text="@string/app_title"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="@color/colorSriftasRed"
        android:textSize="24sp"
        android:textStyle="bold" />
    <Space
        android:layout_height="30dp"
        android:layout_width="match_parent" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:fontFamily="sans-serif-medium"
        android:text="@string/reg_title"
        android:textAlignment="center"
        android:textColor="@color/colorSriftasGreyD"
        android:textSize="16sp"
        android:textStyle="bold"
        android:textAllCaps="true" />
    <Space
        android:layout_height="30dp"
        android:layout_width="match_parent" />

    <EditText
        android:id="@+id/reg_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/colorSriftasRed"
        android:hint="@string/Login_username"
        android:inputType="textPersonName"
        android:textColorHint="@color/colorSriftasGrey" />

    <Space
        android:layout_width="wrap_content"
        android:layout_height="4dp" />

    <EditText
        android:id="@+id/reg_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/colorSriftasRed"
        android:textColorHint="@color/colorSriftasGrey"
        android:hint="@string/Login_password"
        android:inputType="textPassword" />

    <Space
        android:layout_width="wrap_content"
        android:layout_height="4dp" />

    <EditText
        android:id="@+id/reg_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/colorSriftasRed"
        android:textColorHint="@color/colorSriftasGrey"
        android:inputType="textEmailAddress"
        android:hint="@string/Reg_email" />
    <Space
        android:layout_width="wrap_content"
        android:layout_height="4dp" />

    <EditText
        android:id="@+id/editText1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/colorSriftasRed"
        android:textColorHint="@color/colorSriftasGrey"
        android:hint= "@string/Reg_date" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="30dp" />



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <View
            android:layout_width="120dp"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:visibility="invisible" />

        <Button
            android:id="@+id/register_btn_reg"
            android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Login_register_btn"
                android:layout_weight="2"/>
        <View
            android:layout_width="120dp"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:visibility="invisible" />

    </LinearLayout>
</LinearLayout>